# context-cascade

./: .mcp.json  AGENT-REALITY-MAP-SESSION-1-SUMMARY.md  AUDIT-DATABASE-COMPLETE.md  CLAUDE-VERILINGUA.md  CLAUDE-original-backup.md  CLAUDE.md  COMMANDS-CONSOLIDATION-PLAN.md  PHASE-1.8-COMPLETE.md  PHASE-2-COMPLETE.md  PHASE-2-STATUS-REPORT.md  PHASE-2.1-AUDIT-DATABASE-COMPLETE.md  PHASE-3-COMPLETE.md  PHASE-3-TESTING-RESULTS.md  README.md  REMEDIATION-PLAN.md  VERILINGUA-VERIX-BOOTSTRAP-STATUS.md  agent-reality-map-backend.db  pyproject.toml  test_agent.json
cognitive-architecture/: .env.template  COMPREHENSIVE-IMPLEMENTATION-PLAN.md  EXECUTION-BLUEPRINT.md  INTEGRATION-PLAN.md  RUNTIME-OPTIMIZATION-COMPLETE.md  __package_init__.py  conftest.py  pyproject.toml  requirements.txt
cognitive-architecture/commands/: README.md  __init__.py  eval.py  frame.py  mode.py  optimize.py  pareto.py  verix.py
cognitive-architecture/core/: __init__.py  config.py  feature_flags.py  frame_validation_bridge.py  prompt_builder.py  runtime.py  vcl_validator.py  verilingua.py  verix.py
cognitive-architecture/docs/: AUDIT-RESULTS-20251228.md  CALIBRATION.md  Claude_Code_Foundry_Integration_Guide_Low_Confusion_v2.md  Claude_Code_Integration_Playbook_Low_Confusion.md  Claude_Code_Integration_Playbook_Low_Confusion_v2.md  Developer_Integration_Guide_v1.1.md  Developer_Integration_Guide_v1.1_UNIFIED.md  GLOBALMOO-GUIDE.md  GLOBALMOO-INTEGRATION-STATUS.md  HOFSTADTER-IMPROVEMENT-SPEC.md  HOFSTADTER-LOOP1-PACKAGE.json  HOFSTADTER-LOOP2-STATUS.md  HOFSTADTER-PREMORTEM-CONSENSUS.md  HOFSTADTER-SPEC.md  IMPROVEMENT-DELTA-METALOOP-STACK.md  INTEGRATION_GUIDE.md  META-LOOP-BOOTSTRAP-PLAN.md  META-LOOP-BOOTSTRAP-RESULTS.md  PROMPT-ARCHITECT-GUIDE.md  REMEDIATION-PLAN.md  SUBAGENT-VCL-INTERVENTION-ARCHITECTURE.md  SYSTEM-INDEX.md  VERILINGUA-GUIDE.md  VERIX-GUIDE.md  VERIX_PURE_NOTATION_GUIDE.md  VVV-RECURSIVE-IMPROVEMENT-PLAN.md  VVV-ZIGZAG-META-LOOP-PLAN.md
cognitive-architecture/eval/: __init__.py  consistency.py  edge_cases.py  metrics.py
cognitive-architecture/evals/: cli_evaluator.py  multi_model_evaluator.py  real_evaluator.py  test_all_corpora.py  test_prompt_architect.py
cognitive-architecture/hooks/: __init__.py
cognitive-architecture/integration/: COMMAND-OPTIMIZATION-COMPLETE.md  FOUNDRY-INTEGRATION.md  FULL-CASCADE-SUMMARY.md  IMPLEMENTATION-AUDIT.md  ITERATION-1-ANALYSIS.md  PHASE-0-3-INVENTORY.md  REAL-CASCADE-COMPLETE.md  SELF-OPTIMIZATION-SUCCESS-REPORT.md  SELF-REFERENTIAL-OPTIMIZATION.md  __init__.py  agent_optimization_all_categories.json  auditors.py  command_optimization_all_phases.json  command_optimization_phase1.json  metaloop_convergence_results.json  metaloop_optimization_results.json  skill_playbook_optimization_results.json  stop-hook-integrated.sh  telemetry_bridge.py  unified_bridge.py
cognitive-architecture/loopctl/: __init__.py  __main__.py  core.py
cognitive-architecture/modes/: __init__.py  library.py  modes.yaml  selector.py
cognitive-architecture/optimization/: __init__.py  cascade.py  cascade_optimizer.py  distill_modes.py  dspy_compat.py  dspy_level1.py  dspy_level2.py  failure_classifier.py  globalmoo_client.py  hofstadter_dspy.py  holdout_validator.py  impact_analyzer.py  language_evolution.py  mcp_client.py  memory_mcp_integration.py  monthly_analyzer.py  real_evaluator.py  run_real_optimization.py  skill_execution_tracker.py  task_prompt_optimizer.py  telemetry_schema.py  telemetry_steering.py  two_stage_optimizer.py
cognitive-architecture/scripts/: l1_quick_loop.py  l1_self_improvement_loop.py  pdf_chunker.py  real_cascade_optimizer.py  rmis_telemetry_harness.py  run_scheduled_optimization.py  setup_scheduled_task.ps1  (+3 more)
(+2445 files in other folders)
