[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cognitive-architecture"
version = "0.1.0"
description = "VERILINGUA x VERIX x DSPy x GlobalMOO self-improving prompt optimization"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Context Cascade Team"}
]
keywords = [
    "prompt-engineering",
    "llm",
    "optimization",
    "cognitive-architecture",
    "dspy",
    "anthropic",
    "claude",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.18.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.6.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dspy = [
    "dspy-ai>=2.4.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pylint>=3.0.0",
    "mypy>=1.8.0",
    "black>=24.2.0",
    "isort>=5.13.0",
]
all = [
    "cognitive-architecture[dspy,dev]",
]

[project.urls]
Documentation = "https://github.com/context-cascade/cognitive-architecture"
Repository = "https://github.com/context-cascade/cognitive-architecture"

[tool.setuptools.packages.find]
where = ["."]
include = ["cognitive_architecture*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
norecursedirs = [".git", "__pycache__", "storage", "docs"]
collect_ignore = ["__init__.py"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pylint.main]
max-line-length = 100
disable = [
    "C0114",  # missing-module-docstring (we have them)
    "C0115",  # missing-class-docstring (we have them)
    "C0116",  # missing-function-docstring (we have them)
]
